update: renderizacao correta das msg's ao ocorrer clique no icone

--- a/src/public/css/searchResults.css
+++ b/src/public/css/searchResults.css
@@ -384,3 +384,11 @@ body{
     cursor: pointer;
 }
 
+
+
+/* 
+
+    let txtBox = document.createElement('div');
+    txtBox.classList.add('textbox-container');
+    userContainerDiv.appendChild(txtBox);
+*/
