--- a/src/views/searchResults.ejs
+++ b/src/views/searchResults.ejs
@@ -14,6 +14,8 @@
     
     <!-- jquery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+    <script src= "/utils/renderData.js"></script>
 </head>
 <body>
     <div class="main-header">
@@ -138,71 +140,6 @@
                 renderData(to_id);
             }
         }
-
-        const renderData = (to_id) => {
-            socket = io().connect();
-                socket.emit('render_data', {to_id: to_id});
-                socket.on('message_content_loaded', (messageData) => {
-                    let chatContainer = document.querySelector("#chat-container");
-                    if(messageData.content){
-                        //Renderiza tela de conversa
-                        $("#chat-container").empty();
-                        $.ajax({
-                            url: `/v1/messages/${userId}/${to_id}`,
-                            type: 'GET',
-                            success: (messages) => {
-                                $.ajax({
-                                    url: "/v1/chat/render",
-                                    type: 'GET',
-                                    success: (template) => {
-                                        $("#chat-container").html(template);
-                                        /* Renderização da parte superior do chat,
-                                        com o nome do contato */
-
-                                        let contactsDiv = document.createElement('div');
-                                        contactsDiv.classList.add('contacts');
-                                        
-                                        let contactsGroupDiv = document.createElement('div');
-                                        contactsGroupDiv.classList.add('contacts-group-title');
-                                        
-                                        let pContactTitle = document.createElement('p');
-                                        pContactTitle.textContent = messages.data[0].to_message_username;
-                                        pContactTitle.classList.add('ctt-title');
-
-                                        contactsGroupDiv.appendChild(pContactTitle);
-                                        contactsDiv.appendChild(contactsGroupDiv);
-                                        chatContainer.appendChild(contactsDiv);
-
-
-                                        /* Renderização das mensagens */
-                                        let userContainerDiv = document.createElement('div');
-                                        userContainerDiv.classList.add('users-container');
-                                        
-                                        let messageContainerDiv  = document.createElement('div');
-                                        messageContainerDiv.classList.add('message-container');
-                                        userContainerDiv.appendChild(messageContainerDiv);
-                                        chatContainer.appendChild(userContainerDiv);
-
-                                        for(msg of messages.data){
-                                            console.log(msg);
-                                            let receivedMessage = document.createElement('div');
-                                            receivedMessage.classList.add('received-message');
-
-                                            let receivedContent = document.createElement('p');
-                                            receivedContent.classList.add('received-content');
-                                            receivedContent.textContent = msg.message;
-
-                                            receivedMessage.appendChild(receivedContent);
-                                            messageContainerDiv.appendChild(receivedMessage);
-                                        }
-                                    }
-                                })
-                            }
-                        })
-                    }
-                })
-        }
-
 
         document.addEventListener("DOMContentLoaded", (event) => {            
         const url = new URL(window.location.href);
