--- a/src/views/partials/chat.ejs
+++ b/src/views/partials/chat.ejs
@@ -1,4 +1,4 @@
 <div class="chat-username-container">
     <i class="fa-solid fa-arrow-left" style="color: hsl(0, 0%, 100%);"></i>
-    <p class="username">Lorem Ipsum</p>
+    <p class="username"><%= context.UserName %> </p>
     <i class="fa-solid fa-up-down" onclick="chatAppArrowIcon()" style="color: #ffffff;"></i>        </div>
