fix: mensagens unicas no chat

--- a/src/views/searchResults.ejs
+++ b/src/views/searchResults.ejs
@@ -86,7 +86,7 @@
             <% for(user of context.messagesUser){ %>
             <div class="contact-group">
                 <div class="contact-name-group">
-                        <p class="contact-name" d-msg=<%= user.to_message_id %>><%= user.to_message_username %></p>
+                        <p class="contact-name" d-msg=<%= user.message_id %>><%= user.message_username %></p>
                 </div>
                 <i class="fa-solid fa-circle-xmark"></i>
             </div>
@@ -105,7 +105,6 @@
 
         username.forEach((user) => {
             user.addEventListener("click", (e) => {
-                // console.log(e);
                 const idx = e.target.getAttribute('d-msg');
                 renderData(e, idx);
             })
