update: back btn implementado

--- a/src/views/partials/chat.ejs
+++ b/src/views/partials/chat.ejs
@@ -1,4 +1,5 @@
 <div class="chat-username-container">
-    <i class="fa-solid fa-arrow-left" style="color: hsl(0, 0%, 100%);"></i>
+    <!-- back btn -->
+    <i class="fa-solid fa-arrow-left back-btn" id="back-btn" style="color: hsl(0, 0%, 100%);"></i>
     <p class="username"><%= context.UserName %> </p>
     <i class="fa-solid fa-up-down" onclick="chatAppArrowIcon()" style="color: #ffffff;"></i>        </div>
