--- a/src/views/searchResults.ejs
+++ b/src/views/searchResults.ejs
@@ -22,6 +22,7 @@
     <script src="/utils/renderClientMessage.js"></script>
     <script src="/utils/renderComingMessage.js"></script>
     <script src="/utils/saveNewMessage.js"></script>
+    <script src="/utils/backBtn.js"></script>
 </head>
 <body>
     <div class="main-header">
@@ -119,9 +120,10 @@
             if(!socket){
                 socket = io({
                     upgrade: false, 
-                    transports: ['websocket'], 
-                    reconnection: true, 
-                    forceNew: true,
+                    transports: ['websocket'],
+                    query: {
+                        registerId: userId
+                    }
                 });
             }
         }
