--- a/src/public/css/profile.css
+++ b/src/public/css/profile.css
@@ -25,26 +25,31 @@ a{
 }
 
 .home-container{
-    border: 1px solid #00FA9A;
-    background-color: #00FA9A;
-    border-radius: 5px;
-    padding: 15px;
-    margin-left: 8%;
-    transition: 0.5s;
+    /* border: 1px solid #00FA9A;
+    background-color: #00FA9A; */
+    
     color: #fff;
+    transition: box-shadow 0.5s;
+    padding: 6px;
+    
+    border-radius: 5px;
+    margin-left: 8%;
 
     display: flex;
     justify-content: center;
 }
 
+/* 
 .home-container > a{
     color: #fff;
-}
+} 
+*/
 
 .home-container:hover{
-    border: 1px solid #00FF40;
-    color: #fff;
-    background-color: #1B4D3E;
+    /* border: 1px solid #00FF40; */
+    /* color: #fff; */
+    /* background-color: #1B4D3E; */
+    box-shadow: inset 0 0 0 1px #fff;
     transition: 0.5s;
     cursor: pointer;
 }
@@ -56,23 +61,24 @@ a{
 
 .edit-container{
     color: #fff;
-    background-color: #1E90FF;
-    border: 1px solid #1E90FF;
-    padding: 15px;
+    /* background-color: #1E90FF; */
+    /* border: 1px solid #1E90FF; */
+    /* padding: 15px; */
+    padding: 4px;
+
     margin-right: 8%;
     border-radius: 5px;
-    transition: 0.3s;
+    transition: box-shadow 0.5s;
 
     display: flex;
     justify-content: center;
 }
 
 .edit-container:hover{
-    color: #F0F8FF;
-    background-color: #002244;
-    border: 1px solid #7CB9E8;
+    /* color: #F0F8FF; */
+    box-shadow: inset 0 0 0 1px #fff;
     cursor: pointer;
-    transition: 0.3s;
+    transition: 0.5s;
 }
 
 .edit-button{
