--- a/src/views/editProject.ejs
+++ b/src/views/editProject.ejs
@@ -157,7 +157,7 @@
             // Chamada para a API
             try {
                 const response = await fetch('/v1/api/edit/project', {
-                    method: 'POST',
+                    method: 'PUT',
                     body: data,
                 });
                 
