--- a/src/public/css/profileProject.css
+++ b/src/public/css/profileProject.css
@@ -25,13 +25,14 @@ a{
 }
 
 .home-container{
-    border: 1px solid #00FA9A;
-    background-color: #00FA9A;
-    border-radius: 5px;
-    padding: 15px;
-    margin-left: 8%;
-    transition: 0.5s;
+    /* border: 1px solid #00FA9A; */
+    /* background-color: #00FA9A; */
     color: #fff;
+    padding: 4px;
+
+    border-radius: 5px;
+    margin-left: 8%;
+    transition: box-shadow 0.5s;
 }
 
 .home-container > a{
@@ -39,9 +40,10 @@ a{
 }
 
 .home-container:hover{
-    border: 1px solid #00FF40;
-    color: #fff;
-    background-color: #1B4D3E;
+    /* border: 1px solid #00FF40; */
+    /* color: #fff; */
+    /* background-color: #1B4D3E; */
+    box-shadow: inset 0 0 0 1px #fff;
     transition: 0.5s;
     cursor: pointer;
 }
@@ -270,10 +272,6 @@ a{
 .uploaded-image{
     margin: 0px 5%;
     width: 15vw;
-}
-
-
-.delete-icon{
 }
 
 input[type="file"]{
