--- a/src/public/css/search.css
+++ b/src/public/css/search.css
@@ -22,12 +22,12 @@ a{
 }
 
 .home-container{
-    border: 1px solid #00FA9A;
-    background-color: #00FA9A;
+    /* background-color: #303030; */
     border-radius: 5px;
-    padding: 15px;
+    padding: 4px;
     margin: 0 8%;
-    transition: 0.5s;
+    transition: box-shadow 0.5s;
+    box-shadow: inset 0 0 0 transparent;
     color: #fff;
 }
 
@@ -36,32 +36,26 @@ a{
 }
 
 .home-container:hover{
-    border: 1px solid #00FF40;
+    box-shadow: inset 0 0 0 1px #fff;
     color: #fff;
-    background-color: #1B4D3E;
     transition: 0.5s;
     cursor: pointer;
 }
-
 
 .edit-container > a{
     color: #fff;
 }
 .edit-container{
     color: #fff;
-    background-color: #1E90FF;
-    border: 1px solid #1E90FF;
-    padding: 15px;
+    padding: 4px;
     margin: 0 8%;
     border-radius: 5px;
-    transition: 0.3s;
+    transition: box-shadow 0.3s;
 }
 .edit-container:hover{
-    color: #F0F8FF;
-    background-color: #002244;
-    border: 1px solid #7CB9E8;
     cursor: pointer;
     transition: 0.3s;
+    box-shadow: inset 0 0 0 1px #fff;
 }
 
 .academic-logo-container{
