--- a/src/public/css/profile.css
+++ b/src/public/css/profile.css
@@ -117,17 +117,13 @@ a{
 .profile-image{
     width: 230px;
     height: 220px;
-    border-radius: 50%;
-    border: 3px solid #FEBE10;
     object-fit: cover;
-    transition: 0.5s;
     margin-bottom: 5%;
-}
 
-.profile-image:hover{
-    border: 3px solid #fd5c63;
-    border-radius: 1px 8px 1px 8px;
-    transition: 0.5s;    
+    border: 1px solid #696969;
+    border-radius: 5px;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+
 }
 
 .profile-desc-container{
