fix: metodos http

--- a/src/views/editProfile.ejs
+++ b/src/views/editProfile.ejs
@@ -142,7 +142,7 @@
 
             try {
                 const response = await fetch('/v1/api/edit/profile', {
-                    method: 'POST',
+                    method: 'PUT',
                     body: data,
                 });
                 
